@@ -1,6 +1,8 @@
 #-*- mode: org -*-
 #
 * Version 1.2.5 <2018-05-18 Wed>
+  - Updated predict function for phreg 
+    - with plotting functionality 
   - New vignettes started 
     - phreg robust se's for marginal Cox model
     - twostage survival  model 
